proxy README update

--- a/proxy/README
+++ b/proxy/README
@@ -1,3 +1,8 @@
+
+You could use ipsec.reg first.
+If you meet any other questions, check below content.
+
+
 https://kb.meraki.com/knowledge_base/troubleshooting-client-vpn
 
 Error 809
